2011-07-28  Jan Nijtmans  <nijtmans@users.sf.net>

	* xlib/X11/Xutil.h: [Bug 3380684] XEmptyRegion prototype doesn't
	match usage

2011-06-16  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tcl.m4: Sync with win/tcl.m4 from Tcl
	* win/configure: (regenerated)

2011-06-10  Don Porter  <dgp@users.sourceforge.net>

	* generic/tkCanvLine.c: [Bug 3175610] Incomplete refresh of line item.
	Backport of 2011-03-03 trunk commit from Alexandre Ferrieux.

2011-06-06  Don Porter  <dgp@users.sourceforge.net>

	* generic/tkConsole.c:	Restore proper NUL output to the [console].
	[Bug 2546087]

2011-04-22  Peter Spjuth  <peter.spjuth@gmail.com>

	* generic/tkCanvPoly.c: [Bug 3291543] There was a crash if dchars
	* tests/canvas.test:    removed all coordinates of a polygon.

2011-04-21  Peter Spjuth  <peter.spjuth@gmail.com>

	* doc/checkbutton.n: Document all variable options as global.
	* doc/radiobutton.n:
	* doc/listbox.n:
	* doc/menu.n:
	* doc/options.n:

2011-03-28  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tkTextBTree.c: [Bug 3129527]: Fix buffer overflow w/ GCC 4.5 and
	-D_FORTIFY_SOURCE=2. One more place where this problem could appear.

2011-03-24  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tkWinMenu.c: [Bug #3239768] tk8.4.19 (and later) WIN32
	menu font support.

2011-03-12  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tkWin32Dll.c:  SEH-emulation for AMD64
	* win/tkWinX.c:      mingw-w64 does not accept _WIN32_IE < 0x0501
	Merged --cherrypick from core-8-5-branch (2010-12-13, f4ecadb40d)
	* win/tkWinPort.h:  remove conflicting definition of timezone struct

2011-03-11  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/Makefile.in (VC_MANIFEST_EMBED_DLL VC_MANIFEST_EMBED_EXE):
	* win/configure, win/configure.in, win/tcl.m4: SC_EMBED_MANIFEST macro.
	Merged --cherrypick from core-8-5-branch (2010-08-26, 3416226333358009f)

2011-01-25  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tkSelect.c:     [Bug 3129527]: Fix buffer overflow w/ GCC 4.5 and