@@ -38,33 +38,33 @@ typedef struct {
 
 
 static SystemColorEntry sysColors[] = {
-    "3dDarkShadow",		COLOR_3DDKSHADOW,
-    "3dLight",			COLOR_3DLIGHT,
-    "ActiveBorder",		COLOR_ACTIVEBORDER,
-    "ActiveCaption",		COLOR_ACTIVECAPTION,
-    "AppWorkspace",		COLOR_APPWORKSPACE,
-    "Background",		COLOR_BACKGROUND,
-    "ButtonFace",		COLOR_BTNFACE,
-    "ButtonHighlight",		COLOR_BTNHIGHLIGHT,
-    "ButtonShadow",		COLOR_BTNSHADOW,
-    "ButtonText",		COLOR_BTNTEXT,
-    "CaptionText",		COLOR_CAPTIONTEXT,
-    "DisabledText",		COLOR_GRAYTEXT,
-    "GrayText",			COLOR_GRAYTEXT,
-    "Highlight",		COLOR_HIGHLIGHT,
-    "HighlightText",		COLOR_HIGHLIGHTTEXT,
-    "InactiveBorder",		COLOR_INACTIVEBORDER,
-    "InactiveCaption",		COLOR_INACTIVECAPTION,
-    "InactiveCaptionText",	COLOR_INACTIVECAPTIONTEXT,
-    "InfoBackground",		COLOR_INFOBK,
-    "InfoText",			COLOR_INFOTEXT,
-    "Menu",			COLOR_MENU,
-    "MenuText",			COLOR_MENUTEXT,
-    "Scrollbar",		COLOR_SCROLLBAR,
-    "Window",			COLOR_WINDOW,
-    "WindowFrame",		COLOR_WINDOWFRAME,
-    "WindowText",		COLOR_WINDOWTEXT,
-    NULL,			0
+    {"3dDarkShadow",		COLOR_3DDKSHADOW},
+    {"3dLight",			COLOR_3DLIGHT},
+    {"ActiveBorder",		COLOR_ACTIVEBORDER},
+    {"ActiveCaption",		COLOR_ACTIVECAPTION},
+    {"AppWorkspace",		COLOR_APPWORKSPACE},
+    {"Background",		COLOR_BACKGROUND},
+    {"ButtonFace",		COLOR_BTNFACE},
+    {"ButtonHighlight",		COLOR_BTNHIGHLIGHT},
+    {"ButtonShadow",		COLOR_BTNSHADOW},
+    {"ButtonText",		COLOR_BTNTEXT},
+    {"CaptionText",		COLOR_CAPTIONTEXT},
+    {"DisabledText",		COLOR_GRAYTEXT},
+    {"GrayText",			COLOR_GRAYTEXT},
+    {"Highlight",		COLOR_HIGHLIGHT},
+    {"HighlightText",		COLOR_HIGHLIGHTTEXT},
+    {"InactiveBorder",		COLOR_INACTIVEBORDER},
+    {"InactiveCaption",		COLOR_INACTIVECAPTION},
+    {"InactiveCaptionText",	COLOR_INACTIVECAPTIONTEXT},
+    {"InfoBackground",		COLOR_INFOBK},
+    {"InfoText",			COLOR_INFOTEXT},
+    {"Menu",			COLOR_MENU},
+    {"MenuText",			COLOR_MENUTEXT},
+    {"Scrollbar",		COLOR_SCROLLBAR},
+    {"Window",			COLOR_WINDOW},
+    {"WindowFrame",		COLOR_WINDOWFRAME},
+    {"WindowText",		COLOR_WINDOWTEXT},
+    {NULL,			0}
 };
 
 typedef struct ThreadSpecificData { 
